estructura del layout del frontend y paginas secundarias...

--- a/app/Resources/views/frontend/frontend.base.html.twig
+++ b/app/Resources/views/frontend/frontend.base.html.twig
@@ -5,7 +5,7 @@
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>{% block title %} Avivamento! {% endblock %}</title>
+    <title>{% block title %} Avivamiento! {% endblock %}</title>
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <meta name="autor" content="BNF">
     <meta name="copyrigth" content="Copyright © Avivamento.">
