--- a/src/AV/FrontendBundle/Resources/views/Default/index2.html.twig
+++ b/src/AV/FrontendBundle/Resources/views/Default/index2.html.twig
@@ -1,6 +1,6 @@
 {% extends 'FrontendBundle:Layout:frontend.html.twig' %}
 
-{% block content %}
+{% block wrapper %}
     Hello World!
 {% endblock %}
 
