--- a/app/Resources/views/min/backend.base.html.twig
+++ b/app/Resources/views/min/backend.base.html.twig
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>{% block title %}Seniors First!{% endblock %}</title>
+    <title>{% block title %}Avivamiento!{% endblock %}</title>
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 
     {% block stylesheets %}
