event details and templates url setting

--- a/app/Resources/views/frontend/frontend.base.html.twig
+++ b/app/Resources/views/frontend/frontend.base.html.twig
@@ -106,7 +106,7 @@
     <script language="JavaScript" type="text/javascript">
       $('#intro').css("background", "url({{ asset('bundles/frontend/event/img/intro-bg.jpg') }}) top center");
       $('#about').css("background", "url({{ asset('bundles/frontend/event/img/about-bg.jpg') }})");
-      $('#venue .venue-info').css("background", "url({{ asset('bundles/frontend/event/img/venue-info-bg.jpg') }}) top center no-repeat");
+      {#$('#venue .venue-info').css("background", "url({{ asset('bundles/frontend/event/img/venue-info-bg.jpg') }}) top center no-repeat");#}
       {#$('#subscribe').css("background", "url({{ asset('bundles/frontend/event/img/subscribe-bg.jpg') }}) center center no-repeat");#}
       {#$('#preloader').css("background", "#fff url({{ asset('preloader.svg') }}) center center no-repeat");#}
     </script>
