--- a/app/Resources/views/frontend/frontend.layout.1.nav.html.twig
+++ b/app/Resources/views/frontend/frontend.layout.1.nav.html.twig
@@ -8,13 +8,18 @@
             <div id="logo" class="pull-left">
                 <!-- Uncomment below if you prefer to use a text logo -->
                 <!-- <h1><a href="#main">C<span>o</span>nf</a></h1>-->
-                <a href="#intro" class="scrollto">
+                {% if isIndex is not defined %}
+                    {% set home = path('frontend_homepage', {'_locale': app.request.locale}) %}
+                {% else %}
+                    {% set home = '#intro' %}
+                {% endif %}
+                <a href="{{ home }}" class="scrollto">
                     <img src="{{ asset('bundles/frontend/event/img/logo.png') }}" alt="" title=""></a>
             </div>
 
             <nav id="nav-menu-container">
                 <ul class="nav-menu">
-                    <li class="menu-active"><a href="#intro">Home</a></li>
+                    <li class="menu-active"><a href="{{ home }}">{{ 'inicio' | trans }}</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#speakers">Speakers</a></li>
                     <li><a href="#schedule">Schedule</a></li>
