backend  view configuration set

--- a/app/Resources/views/backend/backend.html.twig
+++ b/app/Resources/views/backend/backend.html.twig
@@ -3,7 +3,25 @@
 {% block body %}
     <div id="wrapper">
 
-        {% include ':backend:_backend.layout.nav.html.html.twig' %}
+        <!-- Navigation -->
+        <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Avivamento</a>
+            </div>
+            <!-- /.navbar-header -->
+
+            {% include ':backend:_backend.layout.navbar-top-links.html.twig' %}
+            <!-- /.navbar-top-links -->
+
+            {% include ':backend:_backend.layout.navbar-default-sidebar.html.twig' %}
+            <!-- /.navbar-static-side -->
+        </nav>
 
         <div id="page-wrapper">
             <div class="row">
