--- a/src/AV/BackendBundle/Resources/views/Layout/backend.html.twig
+++ b/src/AV/BackendBundle/Resources/views/Layout/backend.html.twig
@@ -49,8 +49,126 @@
 
 {% block stylesheets %}
     {{ parent() }}
+
+    <link href="{{ asset('bundles/common/sb-admin/vendor/datatables/css/dataTables.bootstrap.css') }}" rel="stylesheet"
+          type="text/css"/>
+
+    {#<link href="{{ asset ('bundles/common/bower_components/bootstrap-datepicker/dist/css/bootstrap-datepicker3.standalone.css') }}"#}
+          {#rel="stylesheet"#}
+          {#type="text/css"/>#}
+
+    <style>
+        .mt-10 {
+            margin-top: 10px
+        }
+
+        .mt-20 {
+            margin-top: 20px
+        }
+
+        .mb-10 {
+            margin-bottom: 10px
+        }
+
+        .mb-20 {
+            margin-bottom: 20px
+        }
+
+        .action-button {
+            width: 100px;
+        }
+    </style>
+
 {% endblock %}
 
 {% block javascripts %}
     {{ parent() }}
+
+    <script src="{{ asset('bundles/common/sb-admin/vendor/datatables/js/jquery.dataTables.js') }}"
+            type="text/javascript"></script>
+    <script src="{{ asset('bundles/common/sb-admin/vendor/datatables/js/dataTables.bootstrap.js') }}"
+            type="text/javascript"></script>
+
+    {#<script src="{{ asset('bundles/common/bower_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.js') }}"#}
+            {#type="text/javascript"></script>#}
+
+    <script type="text/javascript">
+      $(function () {
+        let en_dataTable = {
+          "sEmptyTable": "No data available in table",
+//          "sInfo": "Showing _START_ to _END_ of _TOTAL_ entries",
+          "sInfo": " ",
+          "sInfoEmpty": "Showing 0 to 0 of 0 entries",
+          "sInfoFiltered": "(filtered from _MAX_ total entries)",
+          "sInfoPostFix": "",
+          "sInfoThousands": ",",
+          "sLengthMenu": "Show _MENU_ entries",
+          "sLoadingRecords": "Loading...",
+          "sProcessing": "Processing...",
+          "sSearch": "Search:",
+          "sZeroRecords": "No matching records found",
+          "oPaginate": {
+            "sFirst": "First",
+            "sLast": "Last",
+            "sNext": "Next",
+            "sPrevious": "Previous"
+          },
+          "oAria": {
+            "sSortAscending": ": activate to sort column ascending",
+            "sSortDescending": ": activate to sort column descending"
+          }
+        };
+
+        let es_dataTable = {
+          "sProcessing": "Procesando...",
+          "sLengthMenu": "Mostrar _MENU_ registros",
+          "sZeroRecords": "No se encontraron resultados",
+          "sEmptyTable": "Ningún dato disponible en esta tabla",
+//          "sInfo": "Mostrando registros del _START_ al _END_ de un total de _TOTAL_ registros",
+          "sInfo": " ",
+          "sInfoEmpty": "Mostrando registros del 0 al 0 de un total de 0 registros",
+          "sInfoFiltered": "(filtrado de un total de _MAX_ registros)",
+          "sInfoPostFix": "",
+          "sSearch": "Buscar:",
+          "sUrl": "",
+          "sInfoThousands": ",",
+          "sLoadingRecords": "Cargando...",
+          "oPaginate": {
+            "sFirst": "Primero",
+            "sLast": "Último",
+            "sNext": "Siguiente",
+            "sPrevious": "Anterior"
+          },
+          "oAria": {
+            "sSortAscending": ": Activar para ordenar la columna de manera ascendente",
+            "sSortDescending": ": Activar para ordenar la columna de manera descendente"
+          }
+        };
+
+
+        let actualLang = window._locale_ === 'en' ? en_dataTable : es_dataTable;
+
+        $('.dtable').dataTable({
+          bPaginate: true,
+          bLengthChange: true,
+          bFilter: true,
+          bSort: true,
+          bInfo: true,
+          bAutoWidth: true,
+          oLanguage: actualLang
+        });
+
+        $('.stable').dataTable({
+          bPaginate: false,
+          bLengthChange: true,
+          bFilter: true,
+          bSort: true,
+          bInfo: true,
+          bAutoWidth: true,
+          oLanguage: actualLang
+        });
+      });
+
+    </script>
+
 {% endblock %}
