NewsletterController in backend and frontend ok. Primera iteración... Despues si eso, le pongo mas detalles

--- a/app/Resources/views/backend/_backend.layout.navbar-default-sidebar.html.twig
+++ b/app/Resources/views/backend/_backend.layout.navbar-default-sidebar.html.twig
@@ -14,7 +14,7 @@
                         <a href="{{ path('backend_faq_index') }}">FAQ</a>
                     </li>
                     <li>
-                        <a href="#">Table3</a>
+                        <a href="{{ path('backend_newsletter_index') }}">Newsletter</a>
                     </li>
                     <li>
                         <a href="#">Table4</a>
