--- a/src/AV/FrontendBundle/Resources/views/Default/index.html.twig
+++ b/src/AV/FrontendBundle/Resources/views/Default/index.html.twig
@@ -299,10 +299,11 @@
                 <p>Rerum numquam illum recusandae quia mollitia consequatur.</p>
             </div>
 
-            <form method="POST" action="#">
+            <form method="POST" action="{{ path('frontend_subscribe') }}">
                 <div class="form-row justify-content-center">
                     <div class="col-auto">
-                        <input type="text" class="form-control" placeholder="Enter your Email">
+                        <input type="email" class="form-control" placeholder="Enter your Email" name="news_email"
+                               id="news_email">
                     </div>
                     <div class="col-auto">
                         <button type="submit">Subscribe</button>
