--- a/app/Resources/views/backend/_backend.layout.navbar-default-sidebar.html.twig
+++ b/app/Resources/views/backend/_backend.layout.navbar-default-sidebar.html.twig
@@ -17,7 +17,7 @@
                         <a href="{{ path('backend_newsletter_index') }}">Newsletter</a>
                     </li>
                     <li>
-                        <a href="#">Table4</a>
+                        <a href="{{ path('backend_contacto_index') }}">Contactos</a>
                     </li>
                 </ul>
                 <!-- /.nav-second-level -->
