--- a/src/AV/FrontendBundle/Resources/views/Default/index.html.twig
+++ b/src/AV/FrontendBundle/Resources/views/Default/index.html.twig
@@ -302,8 +302,8 @@
             <form method="POST" action="{{ path('frontend_subscribe') }}">
                 <div class="form-row justify-content-center">
                     <div class="col-auto">
-                        <input type="email" class="form-control" placeholder="Enter your Email" name="news_email"
-                               id="news_email">
+                        <input type="email" class="form-control" placeholder="Enter your Email" name="news-email"
+                               id="news-email">
                     </div>
                     <div class="col-auto">
                         <button type="submit">Subscribe</button>
