adding faq crud from backend and showing in landing page active items

--- a/app/Resources/views/backend/_backend.layout.navbar-default-sidebar.html.twig
+++ b/app/Resources/views/backend/_backend.layout.navbar-default-sidebar.html.twig
@@ -11,7 +11,7 @@
                         <a href="{{ path('backend_configuracion_index', {'_locale': app.request.locale}) }}">Configuración</a>
                     </li>
                     <li>
-                        <a href="#">Table2</a>
+                        <a href="{{ path('backend_faq_index') }}">FAQ</a>
                     </li>
                     <li>
                         <a href="#">Table3</a>
