--- a/src/AV/FrontendBundle/Resources/views/Default/index.html.twig
+++ b/src/AV/FrontendBundle/Resources/views/Default/index.html.twig
@@ -132,21 +132,21 @@
             </div>
 
             {#<div class="row no-gutters">#}
-                {#<div class="col-lg-6 venue-map">#}
-                    {#<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621"#}
-                            {#frameborder="0" style="border:0" allowfullscreen></iframe>#}
-                {#</div>#}
+            {#<div class="col-lg-6 venue-map">#}
+            {#<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621"#}
+            {#frameborder="0" style="border:0" allowfullscreen></iframe>#}
+            {#</div>#}
 
-                {#<div class="col-lg-12 venue-info">#}
-                    {#<div class="row justify-content-center">#}
-                        {#<div class="col-11 col-lg-8">#}
-                            {#<h3>Downtown Conference Center, New York</h3>#}
-                            {#<p>Iste nobis eum sapiente sunt enim dolores labore accusantium autem. Cumque beatae#}
-                                {#ipsam. Est quae sit qui voluptatem corporis velit. Qui maxime accusamus possimus.#}
-                                {#Consequatur sequi et ea suscipit enim nesciunt quia velit.</p>#}
-                        {#</div>#}
-                    {#</div>#}
-                {#</div>#}
+            {#<div class="col-lg-12 venue-info">#}
+            {#<div class="row justify-content-center">#}
+            {#<div class="col-11 col-lg-8">#}
+            {#<h3>Downtown Conference Center, New York</h3>#}
+            {#<p>Iste nobis eum sapiente sunt enim dolores labore accusantium autem. Cumque beatae#}
+            {#ipsam. Est quae sit qui voluptatem corporis velit. Qui maxime accusamus possimus.#}
+            {#Consequatur sequi et ea suscipit enim nesciunt quia velit.</p>#}
+            {#</div>#}
+            {#</div>#}
+            {#</div>#}
             {#</div>#}
         </div>
 
@@ -261,91 +261,25 @@
         <div class="container">
 
             <div class="section-header">
-                <h2>F.A.Q </h2>
+                <h2>{{ 'f.preguntas.respuestas.frecuentes' | trans }} </h2>
             </div>
 
             <div class="row justify-content-center">
                 <div class="col-lg-9">
                     <ul id="faq-list">
 
-                        <li>
-                            <a data-toggle="collapse" class="collapsed" href="#faq1">Non consectetur a erat nam at
-                                lectus urna duis? <i class="fa fa-minus-circle"></i></a>
-                            <div id="faq1" class="collapse" data-parent="#faq-list">
-                                <p>
-                                    Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus
-                                    laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor
-                                    rhoncus dolor purus non.
-                                </p>
-                            </div>
-                        </li>
-
-                        <li>
-                            <a data-toggle="collapse" href="#faq2" class="collapsed">Feugiat scelerisque varius
-                                morbi enim nunc faucibus a pellentesque? <i class="fa fa-minus-circle"></i></a>
-                            <div id="faq2" class="collapse" data-parent="#faq-list">
-                                <p>
-                                    Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id
-                                    interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus
-                                    scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim.
-                                    Mauris ultrices eros in cursus turpis massa tincidunt dui.
-                                </p>
-                            </div>
-                        </li>
-
-                        <li>
-                            <a data-toggle="collapse" href="#faq3" class="collapsed">Dolor sit amet consectetur
-                                adipiscing elit pellentesque habitant morbi? <i class="fa fa-minus-circle"></i></a>
-                            <div id="faq3" class="collapse" data-parent="#faq-list">
-                                <p>
-                                    Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci.
-                                    Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl
-                                    suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis
-                                    convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi quis
-                                </p>
-                            </div>
-                        </li>
-
-                        <li>
-                            <a data-toggle="collapse" href="#faq4" class="collapsed">Ac odio tempor orci dapibus.
-                                Aliquam eleifend mi in nulla? <i class="fa fa-minus-circle"></i></a>
-                            <div id="faq4" class="collapse" data-parent="#faq-list">
-                                <p>
-                                    Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id
-                                    interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus
-                                    scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim.
-                                    Mauris ultrices eros in cursus turpis massa tincidunt dui.
-                                </p>
-                            </div>
-                        </li>
-
-                        <li>
-                            <a data-toggle="collapse" href="#faq5" class="collapsed">Tempus quam pellentesque nec
-                                nam aliquam sem et tortor consequat? <i class="fa fa-minus-circle"></i></a>
-                            <div id="faq5" class="collapse" data-parent="#faq-list">
-                                <p>
-                                    Molestie a iaculis at erat pellentesque adipiscing commodo. Dignissim
-                                    suspendisse in est ante in. Nunc vel risus commodo viverra maecenas accumsan.
-                                    Sit amet nisl suscipit adipiscing bibendum est. Purus gravida quis blandit
-                                    turpis cursus in
-                                </p>
-                            </div>
-                        </li>
-
-                        <li>
-                            <a data-toggle="collapse" href="#faq6" class="collapsed">Tortor vitae purus faucibus
-                                ornare. Varius vel pharetra vel turpis nunc eget lorem dolor? <i
-                                        class="fa fa-minus-circle"></i></a>
-                            <div id="faq6" class="collapse" data-parent="#faq-list">
-                                <p>
-                                    Laoreet sit amet cursus sit amet dictum sit amet justo. Mauris vitae ultricies
-                                    leo integer malesuada nunc vel. Tincidunt eget nullam non nisi est sit amet.
-                                    Turpis nunc eget lorem dolor sed. Ut venenatis tellus in metus vulputate eu
-                                    scelerisque. Pellentesque diam volutpat commodo sed egestas egestas fringilla
-                                    phasellus faucibus. Nibh tellus molestie nunc non blandit massa enim nec.
-                                </p>
-                            </div>
-                        </li>
+                        {% for faq in faqs %}
+                            <li>
+                                <a data-toggle="collapse" class="collapsed" href="#faq{{ loop.index }}">
+                                    {{ faq.any.pregunta }}
+                                    <i class="fa fa-minus-circle"></i></a>
+                                <div id="faq{{ loop.index }}" class="collapse" data-parent="#faq-list">
+                                    <p>
+                                        {{ faq.any.respuesta }}
+                                    </p>
+                                </div>
+                            </li>
+                        {% endfor %}
 
                     </ul>
                 </div>
