--- a/src/AV/FrontendBundle/Resources/views/Default/index.html.twig
+++ b/src/AV/FrontendBundle/Resources/views/Default/index.html.twig
@@ -131,23 +131,25 @@
                 <p>Event venue location info and gallery</p>
             </div>
 
-            {#<div class="row no-gutters">#}
-            {#<div class="col-lg-6 venue-map">#}
-            {#<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621"#}
-            {#frameborder="0" style="border:0" allowfullscreen></iframe>#}
-            {#</div>#}
+            <div class="row no-gutters">
+                <div class="col-lg-6 venue-map" ng-controller="IndexController" ng-init="init()" ng-cloak>
+                    {#<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621"#}
+                            {#frameborder="0" style="border:0" allowfullscreen></iframe>#}
+                    {#<iframe src="https://www.google.com/maps/d/embed?mid=zkqAm4_X6ia8.kj6iIDUiDRdc&hl=es&ll=40.7127, -74.0059"></iframe>#}
+                    <div id="av_map" style="height: 400px"></div>
+                </div>
 
-            {#<div class="col-lg-12 venue-info">#}
-            {#<div class="row justify-content-center">#}
-            {#<div class="col-11 col-lg-8">#}
-            {#<h3>Downtown Conference Center, New York</h3>#}
-            {#<p>Iste nobis eum sapiente sunt enim dolores labore accusantium autem. Cumque beatae#}
-            {#ipsam. Est quae sit qui voluptatem corporis velit. Qui maxime accusamus possimus.#}
-            {#Consequatur sequi et ea suscipit enim nesciunt quia velit.</p>#}
-            {#</div>#}
-            {#</div>#}
-            {#</div>#}
-            {#</div>#}
+                <div class="col-lg-6 venue-info">
+                    <div class="row justify-content-center">
+                        <div class="col-11 col-lg-8">
+                            <h3>Downtown Conference Center, New York</h3>
+                            <p>Iste nobis eum sapiente sunt enim dolores labore accusantium autem. Cumque beatae
+                                ipsam. Est quae sit qui voluptatem corporis velit. Qui maxime accusamus possimus.
+                                Consequatur sequi et ea suscipit enim nesciunt quia velit.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="container-fluid venue-gallery-container">
@@ -322,3 +324,8 @@
 {% endblock %}
 
 
+{% block javascripts %}
+    {{ parent() }}
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD2Dwq_QYZmnUsxqQ60dqbkxxDKFLzpWdI"></script>
+
+{% endblock %}
