traduccciones y menu del nav

--- a/app/Resources/views/frontend/frontend.layout.1.nav.html.twig
+++ b/app/Resources/views/frontend/frontend.layout.1.nav.html.twig
@@ -20,15 +20,17 @@
             <nav id="nav-menu-container">
                 <ul class="nav-menu">
                     <li class="menu-active"><a href="{{ home }}">{{ 'inicio' | trans }}</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#speakers">Speakers</a></li>
-                    <li><a href="#schedule">Schedule</a></li>
-                    <li><a href="#venue">Venue</a></li>
-                    <li><a href="#hotels">Hotels</a></li>
-                    <li><a href="#gallery">Gallery</a></li>
-                    <li><a href="#sponsors">Sponsors</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                    <li class="buy-tickets"><a href="#buy-tickets">Buy Tickets</a></li>
+                    <li><a href="#">{{ 'nav.ministerio' | trans }}</a></li>
+                    <li><a href="#">{{ 'nav.adoracion.y.alabanzas' | trans }}</a></li>
+                    <li><a href="#">{{ 'nav.momentos.supernaturales' | trans }}</a></li>
+                    <li><a href="#">{{ 'nav.ensenanzas' | trans }}</a></li>
+                    <li><a href="#">{{ 'nav.trabajo.comunitario' | trans }}</a></li>
+                    <li><a href="#">{{ 'nav.eventos' | trans }}</a></li>
+                    <li><a href="#">Donaciones </a></li>
+                    {#<li><a href="#">Donations</a></li>#}
+                    {#<li><a href="#sponsors">Sponsors</a></li>#}
+                    {#<li><a href="#contact">Contact</a></li>#}
+                    {#<li class="buy-tickets"><a href="#buy-tickets">Buy Tickets</a></li>#}
                 </ul>
             </nav><!-- #nav-menu-container -->
         </div>
