--- a/src/AV/BackendBundle/Resources/views/Faq/edit.html.twig
+++ b/src/AV/BackendBundle/Resources/views/Faq/edit.html.twig
@@ -14,7 +14,7 @@
         <div class="row">
             <div class="col-lg-6">
                 <h5>Ref Respuesta:
-                    <small>{{ entity.any.respuesta }}</small>
+                    <small>{{ entity.any.respuesta | raw }}</small>
                 </h5>
             </div>
             <br>
