--- a/src/AV/BackendBundle/Resources/views/Faq/new.html.twig
+++ b/src/AV/BackendBundle/Resources/views/Faq/new.html.twig
@@ -14,6 +14,9 @@
     <script src="{{ asset('bundles/common/plugins/medium-editor/dist/js/medium-editor.js') }}"></script>
     <script>
       let editor = new MediumEditor('#av_backendbundle_faq_respuesta', {
+        toolbar: {
+          buttons: ['bold', 'italic', 'underline', 'strikethrough', 'quote', 'anchor', 'justifyLeft', 'justifyCenter', 'justifyRight', 'justifyFull', 'superscript', 'subscript', 'orderedlist', 'unorderedlist', 'pre', 'removeFormat', 'outdent', 'indent', 'h2', 'h3', 'html'],
+        },
         buttonLabels: 'fontawesome'
       });
     </script>
