--- a/src/AV/FrontendBundle/Resources/views/Default/index.html.twig
+++ b/src/AV/FrontendBundle/Resources/views/Default/index.html.twig
@@ -142,10 +142,11 @@
                 <div class="col-lg-6 venue-info">
                     <div class="row justify-content-center">
                         <div class="col-11 col-lg-8">
-                            <h3>Downtown Conference Center, New York</h3>
-                            <p>Iste nobis eum sapiente sunt enim dolores labore accusantium autem. Cumque beatae
-                                ipsam. Est quae sit qui voluptatem corporis velit. Qui maxime accusamus possimus.
-                                Consequatur sequi et ea suscipit enim nesciunt quia velit.</p>
+                            <h3>{{ conf['av_direccion'] }}</h3>
+                            <p>
+                                <strong>{{ 'telefono' | trans }}:</strong> {{ conf['av_telefono'] }}<br>
+                                <strong>Email:</strong> {{ conf['av_email'] }}<br>
+                            </p>
                         </div>
                     </div>
                 </div>
