gallery item first times of backend crud

--- a/app/Resources/views/backend/_backend.layout.navbar-default-sidebar.html.twig
+++ b/app/Resources/views/backend/_backend.layout.navbar-default-sidebar.html.twig
@@ -22,6 +22,9 @@
                     <li>
                         <a href="{{ path('backend_categoria_index') }}">Categorías</a>
                     </li>
+                    <li>
+                        <a href="{{ path('backend_gallery_item_index') }}">Items de Galería</a>
+                    </li>
                 </ul>
                 <!-- /.nav-second-level -->
             </li>
