--- a/src/AV/BackendBundle/Resources/views/GalleryItem/new.html.twig
+++ b/src/AV/BackendBundle/Resources/views/GalleryItem/new.html.twig
@@ -1,3 +1,10 @@
 {% extends 'BackendBundle:Nomenclature:new.html.twig' %}
 
+{% block wrapper_header %}
+    <h4>Por favor, subir una imagen de 800px de ancho por 600px de alto. En caso de la imagen tener otras dimensiones
+        se
+        hará una redimensión automática a estas medidas.</h4>
+    <hr>
+{% endblock %}
+
 
