--- a/src/AV/FrontendBundle/Resources/views/Default/index.html.twig
+++ b/src/AV/FrontendBundle/Resources/views/Default/index.html.twig
@@ -134,7 +134,7 @@
             <div class="row no-gutters">
                 <div class="col-lg-6 venue-map" ng-controller="IndexController" ng-init="init()" ng-cloak>
                     {#<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621"#}
-                            {#frameborder="0" style="border:0" allowfullscreen></iframe>#}
+                    {#frameborder="0" style="border:0" allowfullscreen></iframe>#}
                     {#<iframe src="https://www.google.com/maps/d/embed?mid=zkqAm4_X6ia8.kj6iIDUiDRdc&hl=es&ll=40.7127, -74.0059"></iframe>#}
                     <div id="av_map" style="height: 400px"></div>
                 </div>
@@ -156,85 +156,16 @@
         <div class="container-fluid venue-gallery-container">
             <div class="row no-gutters">
 
-                <div class="col-lg-3 col-md-4">
-                    <div class="venue-gallery">
-                        <a href="{{ asset('bundles/frontend/event/img/venue-gallery/1.jpg') }}" class="venobox"
-                           data-gall="venue-gallery">
-                            <img src="{{ asset('bundles/frontend/event/img/venue-gallery/1.jpg') }}" alt=""
-                                 class="img-fluid">
-                        </a>
+                {% for item in gallery %}
+                    <div class="col-lg-3 col-md-4">
+                        <div class="venue-gallery">
+                            <a href="{{ asset (uploads ~ item.image.path) }}" class="venobox" data-gall="venue-gallery">
+                                <img src="{{ asset (uploads ~ item.image.path) }}" alt="{{ item.image.alt }}"
+                                     class="img-fluid" width="800" height="600">
+                            </a>
+                        </div>
                     </div>
-                </div>
-
-                <div class="col-lg-3 col-md-4">
-                    <div class="venue-gallery">
-                        <a href="{{ asset('bundles/frontend/event/img/venue-gallery/2.jpg') }}" class="venobox"
-                           data-gall="venue-gallery">
-                            <img src="{{ asset('bundles/frontend/event/img/venue-gallery/2.jpg') }}" alt=""
-                                 class="img-fluid">
-                        </a>
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-md-4">
-                    <div class="venue-gallery">
-                        <a href="{{ asset('bundles/frontend/event/img/venue-gallery/3.jpg') }}" class="venobox"
-                           data-gall="venue-gallery">
-                            <img src="{{ asset('bundles/frontend/event/img/venue-gallery/3.jpg') }}" alt=""
-                                 class="img-fluid">
-                        </a>
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-md-4">
-                    <div class="venue-gallery">
-                        <a href="{{ asset('bundles/frontend/event/img/venue-gallery/4.jpg') }}" class="venobox"
-                           data-gall="venue-gallery">
-                            <img src="{{ asset('bundles/frontend/event/img/venue-gallery/4.jpg') }}" alt=""
-                                 class="img-fluid">
-                        </a>
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-md-4">
-                    <div class="venue-gallery">
-                        <a href="{{ asset('bundles/frontend/event/img/venue-gallery/5.jpg') }}" class="venobox"
-                           data-gall="venue-gallery">
-                            <img src="{{ asset('bundles/frontend/event/img/venue-gallery/5.jpg') }}" alt=""
-                                 class="img-fluid">
-                        </a>
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-md-4">
-                    <div class="venue-gallery">
-                        <a href="{{ asset('bundles/frontend/event/img/venue-gallery/6.jpg') }}" class="venobox"
-                           data-gall="venue-gallery">
-                            <img src="{{ asset('bundles/frontend/event/img/venue-gallery/6.jpg') }}" alt=""
-                                 class="img-fluid">
-                        </a>
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-md-4">
-                    <div class="venue-gallery">
-                        <a href="{{ asset('bundles/frontend/event/img/venue-gallery/7.jpg') }}" class="venobox"
-                           data-gall="venue-gallery">
-                            <img src="{{ asset('bundles/frontend/event/img/venue-gallery/7.jpg') }}" alt=""
-                                 class="img-fluid">
-                        </a>
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-md-4">
-                    <div class="venue-gallery">
-                        <a href="{{ asset('bundles/frontend/event/img/venue-gallery/8.jpg') }}" class="venobox"
-                           data-gall="venue-gallery">
-                            <img src="{{ asset('bundles/frontend/event/img/venue-gallery/8.jpg') }}" alt=""
-                                 class="img-fluid">
-                        </a>
-                    </div>
-                </div>
+                {% endfor %}
 
             </div>
         </div>
