cambios de la revision de nelson

--- a/app/Resources/views/frontend/frontend.layout.4.footer.html.twig
+++ b/app/Resources/views/frontend/frontend.layout.4.footer.html.twig
@@ -121,7 +121,7 @@
                         </p>
 
                         <div class="social-links">
-                            <a href="{{ conf['av_facebook'] }}" class="facebook"><i class="fa fa-facebook"></i></a>
+                            <a href="{{ conf['av_facebook'] }}" target="_blank" class="facebook"><i class="fa fa-facebook"></i></a>
                             <a href="{{ conf['av_youtube'] }}" class="youtube"><i class="fa fa-youtube"></i></a>
                         </div>
 
