--- a/app/Resources/views/frontend/frontend.layout.2.header.html.twig
+++ b/app/Resources/views/frontend/frontend.layout.2.header.html.twig
@@ -6,9 +6,9 @@
         <div class="intro-container wow fadeIn">
             <h1 class="mb-4 pb-0">The Annual<br><span>Marketing</span> Conference</h1>
             <p class="mb-4 pb-0">10-12 December, Downtown Conference Center, New York</p>
-            <a href="#" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
-            {#<a href="https://youtu.be/w6iEQB1wIKQ" class="venobox play-btn mb-4" data-vbtype="video"#}
-            {#data-autoplay="true"></a>#}
+            {#<a href="#" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>#}
+            <a href="https://youtu.be/w6iEQB1wIKQ" class="venobox play-btn mb-4" data-vbtype="video"
+            data-autoplay="true"></a>
             <a href="#about" class="about-btn scrollto">About The Event</a>
         </div>
     </section>
