--- a/src/AV/FrontendBundle/Resources/views/Default/index.html.twig
+++ b/src/AV/FrontendBundle/Resources/views/Default/index.html.twig
@@ -258,6 +258,6 @@
 
 {% block javascripts %}
     {{ parent() }}
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD2Dwq_QYZmnUsxqQ60dqbkxxDKFLzpWdI"></script>
+    {#<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD2Dwq_QYZmnUsxqQ60dqbkxxDKFLzpWdI"></script>#}
 
 {% endblock %}
