empezando con las vistas del frontend...

--- a/app/Resources/views/frontend/frontend.layout.1.nav.html.twig
+++ b/app/Resources/views/frontend/frontend.layout.1.nav.html.twig
@@ -21,7 +21,7 @@
                 <ul class="nav-menu">
                     <li class="menu-active"><a href="{{ home }}">{{ 'inicio' | trans }}</a></li>
                     <li><a href="#">{{ 'nav.ministerio' | trans }}</a></li>
-                    <li><a href="#">{{ 'nav.eventos' | trans }}</a></li>
+                    <li><a href="{{ path('frontend_events') }}">{{ 'nav.eventos' | trans }}</a></li>
                     <li><a href="#">{{ 'nav.donaciones' | trans }} </a></li>
                     <li>
                         <a href="#">{{ 'nav.servicios' | trans }}</a>
