--- a/src/AV/FrontendBundle/Resources/views/Default/index.html.twig
+++ b/src/AV/FrontendBundle/Resources/views/Default/index.html.twig
@@ -1,6 +1,5 @@
 {% extends 'FrontendBundle:Layout:frontend-jumbotron.html.twig' %}
 
-
 {% block wrapper %}
     <!--==========================
       Speakers Section
@@ -13,102 +12,34 @@
             </div>
 
             <div class="row">
-                <div class="col-lg-4 col-md-6">
-                    <div class="speaker">
-                        <img src="{{ asset('bundles/frontend/event/img/speakers/1.jpg') }}" alt="Speaker 1"
-                             class="img-fluid">
-                        <div class="details">
-                            <h3><a href="{{ path('frontend_event_details') }}">Brenden Legros</a></h3>
-                            <p>Quas alias incidunt</p>
-                            <div class="social">
-                                <a href=""><i class="fa fa-twitter"></i></a>
-                                <a href=""><i class="fa fa-facebook"></i></a>
-                                <a href=""><i class="fa fa-google-plus"></i></a>
-                                <a href=""><i class="fa fa-linkedin"></i></a>
+                {% for ev in events %}
+                    <div class="col-lg-4 col-md-6">
+                        <div class="speaker">
+                            <img src="{{ asset (uploads ~ ev.image.path) }}" alt="{{ ev.any.titulo }}"
+                                 class="img-fluid">
+                            <div class="details">
+                                <h3>
+                                    <a href="{{ path('frontend_event_details_ref', {'ref' : ev.ref}) }}">{{ ev.any.titulo }}</a>
+                                </h3>
+                                {% set plength = 85 %}
+                                {% if ev.any.texto | length > plength %}
+                                    <p>{{ ev.any.texto [:plength] | raw }}
+                                        <a href="{{ path('frontend_event_details_ref', {'ref' : ev.ref}) }}">...</a>
+                                    </p>
+                                {% else %}
+                                    <p>{{ ev.any.texto | raw }} </p>
+                                {% endif %}
+
+                                {#<div class="social">#}
+                                {#<a href=""><i class="fa fa-twitter"></i></a>#}
+                                {#<a href=""><i class="fa fa-facebook"></i></a>#}
+                                {#<a href=""><i class="fa fa-google-plus"></i></a>#}
+                                {#<a href=""><i class="fa fa-linkedin"></i></a>#}
+                                {#</div>#}
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="speaker">
-                        <img src="{{ asset('bundles/frontend/event/img/speakers/2.jpg') }}" alt="Speaker 2"
-                             class="img-fluid">
-                        <div class="details">
-                            <h3><a href="{{ path('frontend_event_details') }}">Hubert Hirthe</a></h3>
-                            <p>Consequuntur odio aut</p>
-                            <div class="social">
-                                <a href=""><i class="fa fa-twitter"></i></a>
-                                <a href=""><i class="fa fa-facebook"></i></a>
-                                <a href=""><i class="fa fa-google-plus"></i></a>
-                                <a href=""><i class="fa fa-linkedin"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="speaker">
-                        <img src="{{ asset('bundles/frontend/event/img/speakers/3.jpg') }}" alt="Speaker 3"
-                             class="img-fluid">
-                        <div class="details">
-                            <h3><a href="{{ path('frontend_event_details') }}">Cole Emmerich</a></h3>
-                            <p>Fugiat laborum et</p>
-                            <div class="social">
-                                <a href=""><i class="fa fa-twitter"></i></a>
-                                <a href=""><i class="fa fa-facebook"></i></a>
-                                <a href=""><i class="fa fa-google-plus"></i></a>
-                                <a href=""><i class="fa fa-linkedin"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="speaker">
-                        <img src="{{ asset('bundles/frontend/event/img/speakers/4.jpg') }}" alt="Speaker 4"
-                             class="img-fluid">
-                        <div class="details">
-                            <h3><a href="{{ path('frontend_event_details') }}">Jack Christiansen</a></h3>
-                            <p>Debitis iure vero</p>
-                            <div class="social">
-                                <a href=""><i class="fa fa-twitter"></i></a>
-                                <a href=""><i class="fa fa-facebook"></i></a>
-                                <a href=""><i class="fa fa-google-plus"></i></a>
-                                <a href=""><i class="fa fa-linkedin"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="speaker">
-                        <img src="{{ asset('bundles/frontend/event/img/speakers/5.jpg') }}" alt="Speaker 5"
-                             class="img-fluid">
-                        <div class="details">
-                            <h3><a href="{{ path('frontend_event_details') }}">Alejandrin Littel</a></h3>
-                            <p>Qui molestiae natus</p>
-                            <div class="social">
-                                <a href=""><i class="fa fa-twitter"></i></a>
-                                <a href=""><i class="fa fa-facebook"></i></a>
-                                <a href=""><i class="fa fa-google-plus"></i></a>
-                                <a href=""><i class="fa fa-linkedin"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="speaker">
-                        <img src="{{ asset('bundles/frontend/event/img/speakers/6.jpg') }}" alt="Speaker 6"
-                             class="img-fluid">
-                        <div class="details">
-                            <h3><a href="{{ path('frontend_event_details') }}">Willow Trantow</a></h3>
-                            <p>Non autem dicta</p>
-                            <div class="social">
-                                <a href=""><i class="fa fa-twitter"></i></a>
-                                <a href=""><i class="fa fa-facebook"></i></a>
-                                <a href=""><i class="fa fa-google-plus"></i></a>
-                                <a href=""><i class="fa fa-linkedin"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                {% endfor %}
             </div>
         </div>
 
